--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "3.14.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
     "ethers": "^5",
+    "ethers-aws-kms-signer": "^1.3.2",
     "heroicons": "^2.0.18",
     "latest": "^0.2.0",
     "next": "^13",
